@@ -15,6 +15,10 @@ import org.junit.jupiter.api.Test;
 
 import org.mockito.*;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -25,6 +29,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
 class VillageServiceTests {
+    private static final int pageNumber = 0;
+    private static final int elementsCount = 6;
+    private static final String sort = "asc";
     @Mock
     private VillageRepository villageRepository;
     @Mock
@@ -33,7 +40,6 @@ class VillageServiceTests {
     private RegionService regionService;
     @Mock
     private AuthService authService;
-
     @InjectMocks
     private VillageService villageService;
 
@@ -53,32 +59,23 @@ class VillageServiceTests {
 
     @Test
     void testGetAllSearchVillages() {
-        Village village1 = new Village();
-        village1.setName("Village1");
+        Village village = new Village();
+        village.setName("Village1");
+
         Village village2 = new Village();
-        village2.setName("Village2");
+        village.setName("Village2");
 
-        List<Village> mockVillages = new ArrayList<>();
-        mockVillages.add(village1);
-        mockVillages.add(village2);
+        Page<Village> villagePage = new PageImpl<>(List.of(village, village2));
 
-        VillageDTO villageDTO1 = new VillageDTO();
-        villageDTO1.setName("Village1");
+        when(villageRepository.findByNameContainingIgnoreCaseOrderByRegionNameAsc(
+                ArgumentMatchers.anyString(), ArgumentMatchers.any(Pageable.class)))
+                .thenReturn(villagePage);
 
-        VillageDTO villageDTO2 = new VillageDTO();
-        villageDTO2.setName("Village2");
-        when(villageRepository.findByNameContainingIgnoreCaseOrderByRegionNameAsc("Village")).thenReturn(mockVillages);
-        when(modelMapper.map(village1, VillageDTO.class)).thenReturn(villageDTO1);
-        when(modelMapper.map(village2, VillageDTO.class)).thenReturn(villageDTO2);
+        Page<VillageDTO> resultPage = villageService.getAllSearchVillages("Village", pageNumber, elementsCount, sort);
 
-        List<VillageDTO> result = villageService.getAllSearchVillages("Village");
-
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("Village1", result.get(0).getName());
-        assertEquals("Village2", result.get(1).getName());
+        assertEquals(2, resultPage.getTotalElements());
+        assertEquals(2, resultPage.getContent().size());
     }
-
 
     @Test
     void testGetAllSearchVillagesByRegionName() {
@@ -92,7 +89,7 @@ class VillageServiceTests {
         village2.setName("Village2");
         village2.setRegion(new Region(2L, "Region2"));
 
-        List<Village> mockVillages = Arrays.asList(village1, village2);
+        List<Village> mockVillages = List.of(village1, village2);
 
         VillageDTO villageDTO1 = new VillageDTO();
         villageDTO1.setName("Village1");
@@ -105,16 +102,17 @@ class VillageServiceTests {
         when(modelMapper.map(village1, VillageDTO.class)).thenReturn(villageDTO1);
         when(modelMapper.map(village2, VillageDTO.class)).thenReturn(villageDTO2);
 
-        when(villageRepository.findByRegionName("Region1")).thenReturn(mockVillages);
+        Pageable page = PageRequest.of(pageNumber, elementsCount);
+        when(villageRepository.findByRegionName("Region1", page)).thenReturn(new PageImpl<>(mockVillages, page, mockVillages.size()));
 
-        List<VillageDTO> result = villageService.getAllSearchVillagesByRegionName("Region1");
+        Page<VillageDTO> result = villageService.getAllSearchVillagesByRegionName("Region1", pageNumber, elementsCount, sort);
 
-        verify(villageRepository).findByRegionName("Region1");
+        verify(villageRepository).findByRegionName("Region1", page);
 
         assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("Village1", result.get(0).getName());
-        assertEquals("Village2", result.get(1).getName());
+        assertEquals(2, result.getTotalElements());
+        assertEquals("Village1", result.getContent().get(0).getName());
+        assertEquals("Village2", result.getContent().get(1).getName());
     }
 
     @Test
@@ -129,10 +127,11 @@ class VillageServiceTests {
         village2.setName("Village2");
         village2.setRegion(new Region(2L, "Region2"));
 
-        List<Village> mockVillages = Arrays.asList(village1, village2);
+        List<Village> mockVillages = List.of(village1, village2);
 
-        when(villageRepository.findByNameContainingIgnoreCaseAndRegionName("Region1", "Village1"))
-                .thenReturn(mockVillages);
+        Pageable page = PageRequest.of(pageNumber, elementsCount);
+        when(villageRepository.findByNameContainingIgnoreCaseAndRegionName("Region1", "Village1", page))
+                .thenReturn(new PageImpl<>(mockVillages, page, mockVillages.size()));
 
         VillageDTO villageDTO1 = new VillageDTO();
         villageDTO1.setName("Village1");
@@ -143,25 +142,23 @@ class VillageServiceTests {
         when(modelMapper.map(village1, VillageDTO.class)).thenReturn(villageDTO1);
         when(modelMapper.map(village2, VillageDTO.class)).thenReturn(villageDTO2);
 
-        List<VillageDTO> result = villageService.getAllSearchVillagesByNameAndRegionName("Region1", "Village1");
+        Page<VillageDTO> result = villageService.getAllSearchVillagesByNameAndRegionName("Region1", "Village1", pageNumber, elementsCount);
 
-        verify(villageRepository).findByNameContainingIgnoreCaseAndRegionName("Region1", "Village1");
+        verify(villageRepository).findByNameContainingIgnoreCaseAndRegionName("Region1", "Village1", PageRequest.of(pageNumber, elementsCount));
 
         assertNotNull(result);
-        assertEquals(2, result.size());
-        assertEquals("Village1", result.get(0).getName());
-        assertEquals("Village2", result.get(1).getName());
+        assertEquals(2, result.getTotalElements());
+        assertEquals("Village1", result.getContent().get(0).getName());
+        assertEquals("Village2", result.getContent().get(1).getName());
     }
-
 
     @Test
     void testGetAllSearchVillagesByRegionNameNoVillagesFound() {
+        when(villageRepository.findByRegionName("NonExistentRegion", PageRequest.of(pageNumber, elementsCount))).thenReturn(new PageImpl<>(List.of(), PageRequest.of(pageNumber, elementsCount), 0));
 
-        when(villageRepository.findByRegionName("NonExistentRegion")).thenReturn(Collections.emptyList());
+        Page<VillageDTO> result = villageService.getAllSearchVillagesByRegionName("NonExistentRegion", pageNumber, elementsCount, sort);
 
-        List<VillageDTO> result = villageService.getAllSearchVillagesByRegionName("NonExistentRegion");
-
-        verify(villageRepository).findByRegionName("NonExistentRegion");
+        verify(villageRepository).findByRegionName("NonExistentRegion", PageRequest.of(pageNumber, elementsCount));
 
         assertNotNull(result);
         Assertions.assertTrue(result.isEmpty());
@@ -169,30 +166,29 @@ class VillageServiceTests {
 
     @Test
     void testGetAllSearchVillagesByNameAndRegionNameNoVillagesFound() {
-        when(villageRepository.findByNameContainingIgnoreCaseAndRegionName("Region1", "NonExistentVillage"))
-                .thenReturn(Collections.emptyList());
+        when(villageRepository.findByNameContainingIgnoreCaseAndRegionName("Region1", "NonExistentVillage", PageRequest.of(pageNumber, elementsCount)))
+                .thenReturn(new PageImpl<>(List.of(), PageRequest.of(pageNumber, elementsCount), 0));
 
-        List<VillageDTO> result = villageService.getAllSearchVillagesByNameAndRegionName("Region1", "NonExistentVillage");
+        Page<VillageDTO> result = villageService.getAllSearchVillagesByNameAndRegionName("Region1", "NonExistentVillage", pageNumber, elementsCount);
 
-        verify(villageRepository).findByNameContainingIgnoreCaseAndRegionName("Region1", "NonExistentVillage");
+        verify(villageRepository).findByNameContainingIgnoreCaseAndRegionName("Region1", "NonExistentVillage", PageRequest.of(pageNumber, elementsCount));
 
         assertNotNull(result);
         Assertions.assertTrue(result.isEmpty());
     }
 
-
     @Test
     void testGetSearchVillagesWhenNoVillagesFoundWithParamsNoVillagesFound() {
+        Page<Village> mockedPage = new PageImpl<>(Collections.emptyList());
+        when(villageRepository.searchVillages(anyList(), anyList(), any(Children.class), any())).thenReturn(mockedPage);
 
-        when(villageRepository.searchVillages(anyList(), anyList(), any(Children.class))).thenReturn(Collections.emptyList());
-
-        List<String> objectAroundVillageDTOS = Arrays.asList("object1", "object2");
-        List<String> livingConditionDTOS = Arrays.asList("condition1", "condition2");
+        List<String> objectAroundVillageDTOS = List.of("object1", "object2");
+        List<String> livingConditionDTOS = List.of("condition1", "condition2");
         Children children = Children.FROM_21_TO_50;
 
-        List<VillageDTO> result = villageService.getSearchVillages(objectAroundVillageDTOS, livingConditionDTOS, children);
+        Page<VillageDTO> result = villageService.getSearchVillages(objectAroundVillageDTOS, livingConditionDTOS, children, pageNumber, elementsCount, sort);
 
-        verify(villageRepository).searchVillages(objectAroundVillageDTOS, livingConditionDTOS, children);
+        verify(villageRepository).searchVillages(eq(objectAroundVillageDTOS), eq(livingConditionDTOS), eq(children), any());
 
         assertNotNull(result);
         Assertions.assertTrue(result.isEmpty());
@@ -200,33 +196,31 @@ class VillageServiceTests {
 
     @Test
     void testGetSearchVillagesWhenNoVillagesFoundWithEmptyParams() {
+        Page<Village> mockedPage = new PageImpl<>(Collections.emptyList());
+        when(villageRepository.searchVillages(anyList(), anyList(), any(Children.class), any())).thenReturn(mockedPage);
 
-        when(villageRepository.searchVillages(anyList(), anyList(), any(Children.class))).thenReturn(Collections.emptyList());
+        Page<VillageDTO> result = villageService.getSearchVillages(List.of(), List.of(), Children.OVER_50, pageNumber, elementsCount, sort);
 
-        List<VillageDTO> result = villageService.getSearchVillages(new ArrayList<>(), new ArrayList<>(), Children.OVER_50);
-
-        verify(villageRepository).searchVillages(anyList(), anyList(), any(Children.class));
+        verify(villageRepository).searchVillages(anyList(), anyList(), any(Children.class), any());
 
         assertNotNull(result);
         Assertions.assertTrue(result.isEmpty());
     }
-
 
     @Test
     void testGetSearchVillagesByLivingConditionAndChildrenNoVillagesFound() {
+        Page<Village> mockedPage = new PageImpl<>(Collections.emptyList());
+        when(villageRepository.searchVillagesByLivingConditionAndChildren(anyList(), any(Children.class), any())).thenReturn(mockedPage);
 
-        when(villageRepository.searchVillagesByLivingConditionAndChildren(anyList(), any(Children.class))).thenReturn(Collections.emptyList());
-
-        List<String> livingConditionDTOS = Arrays.asList("condition1", "condition2");
+        List<String> livingConditionDTOS = List.of("condition1", "condition2");
         Children children = Children.BELOW_10;
-        List<VillageDTO> result = villageService.getSearchVillagesByLivingConditionAndChildren(livingConditionDTOS, children);
+        Page<VillageDTO> result = villageService.getSearchVillagesByLivingConditionAndChildren(livingConditionDTOS, children, pageNumber, elementsCount, sort);
 
-        verify(villageRepository).searchVillagesByLivingConditionAndChildren(livingConditionDTOS, children.getEnumValue());
+        verify(villageRepository).searchVillagesByLivingConditionAndChildren(eq(livingConditionDTOS), eq(children.getEnumValue()), any());
 
         assertNotNull(result);
         Assertions.assertTrue(result.isEmpty());
     }
-
 
     @Test
     void testGetSearchVillagesByChildrenCount() {
@@ -234,7 +228,7 @@ class VillageServiceTests {
         village1.setId(1L);
         village1.setName("Village1");
         village1.setRegion(new Region(1L, "Region1"));
-        village1.setPopulations(Arrays.asList(
+        village1.setPopulations(List.of(
                 new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
                         true, LocalDateTime.now(), LocalDateTime.now())
         ));
@@ -246,26 +240,26 @@ class VillageServiceTests {
         PopulationDTO populationDTO1 = new PopulationDTO();
         populationDTO1.setChildren(Children.FROM_21_TO_50);
         villageDTO1.setPopulations(Collections.singletonList(populationDTO1));
-
+        Pageable page = PageRequest.of(0, 6);
         when(villageRepository.searchVillagesByChildrenCount(
-                ArgumentMatchers.any(Children.class)
-        )).thenReturn(Arrays.asList(village1));
+                ArgumentMatchers.any(Children.class), ArgumentMatchers.eq(page)
+        )).thenReturn(new PageImpl<>(List.of(village1), page, 1));
+        when(villageService.villageToVillageDTO(village1)).thenReturn(villageDTO1);
 
         Children children = Children.FROM_21_TO_50;
 
-        List<VillageDTO> result = villageService.getSearchVillagesByChildrenCount(children);
+        Page<VillageDTO> result = villageService.getSearchVillagesByChildrenCount(children, pageNumber, elementsCount, sort);
 
         Mockito.verify(villageRepository).searchVillagesByChildrenCount(
-                children.getEnumValue()
+                children.getEnumValue(), page
         );
 
-        assertEquals(1, result.size());
+        assertEquals(1, result.getTotalElements());
 
-        VillageDTO expectedDTO = result.get(0);
+        VillageDTO expectedDTO = result.getContent().get(0);
         assertEquals(villageDTO1.getId(), expectedDTO.getId());
         assertEquals(villageDTO1.getName(), expectedDTO.getName());
         assertEquals(villageDTO1.getRegion(), expectedDTO.getRegion());
-
     }
 
     @Test
@@ -279,7 +273,7 @@ class VillageServiceTests {
         village2.setId(2L);
         village2.setName("Village2");
         village2.setRegion(new Region(2L, "Region2"));
-        List<Village> mockVillages = Arrays.asList(village1, village2);
+        List<Village> mockVillages = List.of(village1, village2);
 
         when(villageRepository.findAll()).thenReturn(mockVillages);
 
@@ -327,103 +321,9 @@ class VillageServiceTests {
         assertEquals("Region1", result.getRegion());
     }
 
-
-    @Test
-    void testConvertToLivingConditionDTOList() {
-        List<VillageLivingConditions> villageLivingConditions = new ArrayList<>();
-        VillageLivingConditions vl1 = new VillageLivingConditions();
-        vl1.setId(1L);
-        vl1.setLivingCondition(new LivingCondition(1L, "Condition1"));
-        villageLivingConditions.add(vl1);
-        VillageLivingConditions vl2 = new VillageLivingConditions();
-        vl2.setId(2L);
-        vl2.setLivingCondition(new LivingCondition(2L, "Condition2"));
-        villageLivingConditions.add(vl2);
-
-        List<LivingConditionDTO> livingConditionDTOs = villageService.convertToLivingConditionDTOList(villageLivingConditions);
-
-        assertEquals(2, livingConditionDTOs.size());
-
-        LivingConditionDTO dto1 = livingConditionDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Condition1", dto1.getLivingConditionName());
-
-        LivingConditionDTO dto2 = livingConditionDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Condition2", dto2.getLivingConditionName());
-    }
-
-
-    @Test
-    void testConvertToPopulationDTO() {
-        Children children = Children.OVER_50;
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        PopulationDTO populationDTO = villageService.convertToPopulationDTO(children);
-
-        assertEquals(Children.OVER_50, populationDTO.getChildren());
-    }
-
-
-    @Test
-    void testVillageToVillageDTOWithoutObject() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-
-        VillageLivingConditions vl1 = new VillageLivingConditions();
-        vl1.setId(1L);
-        vl1.setLivingCondition(new LivingCondition(1L, "Condition1"));
-        village1.setVillageLivingConditions(List.of(vl1));
-
-        village1.setPopulations(Arrays.asList(
-                new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
-                        true, LocalDateTime.now(), LocalDateTime.now())
-        ));
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-
-        VillageLivingConditions vl2 = new VillageLivingConditions();
-        vl2.setId(2L);
-        vl2.setLivingCondition(new LivingCondition(2L, "Condition2"));
-        village2.setVillageLivingConditions(List.of(vl2));
-
-        village2.setPopulations(Arrays.asList(
-                new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
-                        true, LocalDateTime.now(), LocalDateTime.now())
-        ));villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.villageToVillageDTOWithoutObject(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(1, dto1.getLivingConditions().size());
-        assertEquals(Children.FROM_21_TO_50, dto1.getPopulations().get(0).getChildren());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(1, dto2.getLivingConditions().size());
-        assertEquals(Children.FROM_21_TO_50, dto2.getPopulations().get(0).getChildren());
-
-    }
-
     @Test
     void testGetSearchVillagesByLivingConditionAndChildren() {
-        List<String> livingConditions = Arrays.asList("Condition1", "Condition2");
+        List<String> livingConditions = List.of("Condition1", "Condition2");
         Children children = Children.BELOW_10;
 
         List<Village> villages = new ArrayList<>();
@@ -437,7 +337,7 @@ class VillageServiceTests {
         vl1.setLivingCondition(new LivingCondition(1L, "Condition1"));
         village1.setVillageLivingConditions(List.of(vl1));
 
-        village1.setPopulations(Arrays.asList(
+        village1.setPopulations(List.of(
                 new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
                         true, LocalDateTime.now(), LocalDateTime.now())
         ));
@@ -453,120 +353,35 @@ class VillageServiceTests {
         vl2.setLivingCondition(new LivingCondition(2L, "Condition2"));
         village2.setVillageLivingConditions(List.of(vl2));
 
-        village2.setPopulations(Arrays.asList(
+        village2.setPopulations(List.of(
                 new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
                         true, LocalDateTime.now(), LocalDateTime.now())
         ));
         villages.add(village2);
+        Pageable page = PageRequest.of(pageNumber, elementsCount);
 
         VillageRepository mockRepository = mock(VillageRepository.class);
-        when(mockRepository.searchVillagesByLivingConditionAndChildren(livingConditions, children.getEnumValue())).thenReturn(villages);
+        when(mockRepository.searchVillagesByLivingConditionAndChildren(livingConditions, children.getEnumValue(), page)).thenReturn(new PageImpl<>(villages, page, villages.size()));
 
-        VillageService villageService = new VillageService(mockRepository, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.getSearchVillagesByLivingConditionAndChildren(livingConditions, children);
+        VillageService villageService = new VillageService(mockRepository, new ModelMapper(), null, null);
+        Page<VillageDTO> villageDTOs = villageService.getSearchVillagesByLivingConditionAndChildren(livingConditions, children, pageNumber, elementsCount, sort);
 
-        assertEquals(2, villageDTOs.size());
+        assertEquals(2, villageDTOs.getTotalElements());
 
-        VillageDTO dto1 = villageDTOs.get(0);
+        VillageDTO dto1 = villageDTOs.getContent().get(0);
         assertEquals(1L, dto1.getId());
         assertEquals("Village1", dto1.getName());
         assertEquals("Region1", dto1.getRegion());
         assertEquals(1, dto1.getLivingConditions().size());
         assertEquals(Children.FROM_21_TO_50, dto1.getPopulations().get(0).getChildren());
 
-        VillageDTO dto2 = villageDTOs.get(1);
+        VillageDTO dto2 = villageDTOs.getContent().get(1);
         assertEquals(2L, dto2.getId());
         assertEquals("Village2", dto2.getName());
         assertEquals("Region2", dto2.getRegion());
         assertEquals(1, dto2.getLivingConditions().size());
         assertEquals(Children.FROM_21_TO_50, dto2.getPopulations().get(0).getChildren());
-
     }
-
-
-    @Test
-    void testConvertToObjectAroundVillageDTOList() {
-        List<ObjectVillage> objectVillages = new ArrayList<>();
-        ObjectVillage ov1 = new ObjectVillage();
-        ov1.setObject(new ObjectAroundVillage(1L, "Type1"));
-        objectVillages.add(ov1);
-        ObjectVillage ov2 = new ObjectVillage();
-        ov2.setObject(new ObjectAroundVillage(2L, "Type2"));
-        objectVillages.add(ov2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<ObjectAroundVillageDTO> objectAroundVillageDTOs = villageService.convertToObjectAroundVillageDTOList(objectVillages);
-
-        assertEquals(2, objectAroundVillageDTOs.size());
-
-        ObjectAroundVillageDTO dto1 = objectAroundVillageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Type1", dto1.getType());
-
-        ObjectAroundVillageDTO dto2 = objectAroundVillageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Type2", dto2.getType());
-    }
-
-
-    @Test
-    void testVillageToVillageDTOWithoutLivingCondition() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-
-        ObjectAroundVillage object1 = new ObjectAroundVillage(1L, "Type1");
-        ObjectVillage objectVillage1 = new ObjectVillage();
-        objectVillage1.setObject(object1);
-        village1.setObjectVillages(List.of(objectVillage1));
-
-        village1.setPopulations(Arrays.asList(
-                new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.OVER_50, Foreigners.I_DONT_KNOW, true, LocalDateTime.now(), LocalDateTime.now())
-        ));
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-
-        ObjectAroundVillage object2 = new ObjectAroundVillage(2L, "Type2");
-        ObjectVillage objectVillage2 = new ObjectVillage();
-        objectVillage2.setObject(object2);
-        village2.setObjectVillages(List.of(objectVillage2));
-
-        village2.setPopulations(Arrays.asList(
-                new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_11_TO_20, Foreigners.I_DONT_KNOW,
-                        true, LocalDateTime.now(), LocalDateTime.now())
-        ));
-        villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.villageToVillageDTOWithoutLivingCondition(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(1, dto1.getObject().size());
-        assertEquals(1L, dto1.getObject().get(0).getId());
-        assertEquals("Type1", dto1.getObject().get(0).getType());
-        assertEquals(Children.OVER_50, dto1.getPopulations().get(0).getChildren());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(1, dto2.getObject().size());
-        assertEquals(2L, dto2.getObject().get(0).getId());
-        assertEquals("Type2", dto2.getObject().get(0).getType());
-        assertEquals(Children.FROM_11_TO_20, dto2.getPopulations().get(0).getChildren());
-    }
-
 
     @Test
     void testGetSearchVillagesByObjectAndChildren() {
@@ -579,7 +394,7 @@ class VillageServiceTests {
         ObjectVillage objectVillage1 = new ObjectVillage();
         objectVillage1.setObject(object1);
         village1.setObjectVillages(List.of(objectVillage1));
-        village1.setPopulations(Arrays.asList(
+        village1.setPopulations(List.of(
                 new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
                         true, LocalDateTime.now(), LocalDateTime.now())
         ));
@@ -593,90 +408,34 @@ class VillageServiceTests {
         ObjectVillage objectVillage2 = new ObjectVillage();
         objectVillage2.setObject(object2);
         village2.setObjectVillages(List.of(objectVillage2));
-        village2.setPopulations(Arrays.asList(
+        village2.setPopulations(List.of(
                 new Population(1L, village2, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_11_TO_20, Foreigners.I_DONT_KNOW,
                         true, LocalDateTime.now(), LocalDateTime.now())
         ));
         villages.add(village2);
 
         VillageRepository mockRepository = mock(VillageRepository.class);
-        when(mockRepository.searchVillagesByObjectAndChildren(anyList(), any(Children.class))).thenReturn(villages);
+        when(mockRepository.searchVillagesByObjectAndChildren(anyList(), any(Children.class), any())).thenReturn(new PageImpl<>(villages, PageRequest.of(pageNumber, elementsCount), villages.size()));
 
-        VillageService villageService = new VillageService(mockRepository, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.getSearchVillagesByObjectAndChildren(Collections.singletonList("Object1"), Children.OVER_50);
+        VillageService villageService = new VillageService(mockRepository, new ModelMapper(), null, null);
+        Page<VillageDTO> villageDTOs = villageService.getSearchVillagesByObjectAndChildren(Collections.singletonList("Object1"), Children.OVER_50, pageNumber, elementsCount, sort);
 
-        assertEquals(2, villageDTOs.size());
+        assertEquals(2, villageDTOs.getTotalElements());
 
-        VillageDTO dto1 = villageDTOs.get(0);
+        VillageDTO dto1 = villageDTOs.getContent().get(0);
         assertEquals(1L, dto1.getId());
         assertEquals("Village1", dto1.getName());
         assertEquals("Region1", dto1.getRegion());
         assertEquals(1, dto1.getObject().size());
         assertEquals(Children.FROM_21_TO_50, dto1.getPopulations().get(0).getChildren());
 
-        VillageDTO dto2 = villageDTOs.get(1);
+        VillageDTO dto2 = villageDTOs.getContent().get(1);
         assertEquals(2L, dto2.getId());
         assertEquals("Village2", dto2.getName());
         assertEquals("Region2", dto2.getRegion());
         assertEquals(1, dto2.getObject().size());
         assertEquals(Children.FROM_11_TO_20, dto2.getPopulations().get(0).getChildren());
     }
-
-
-    @Test
-    void testVillageToVillageDTOWithoutChildren() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-
-        ObjectAroundVillage object1 = new ObjectAroundVillage(1L, "Type1");
-        ObjectVillage objectVillage1 = new ObjectVillage();
-        objectVillage1.setObject(object1);
-        village1.setObjectVillages(List.of(objectVillage1));
-
-        LivingCondition livingCondition1 = new LivingCondition(1L, "LivingCondition1");
-        VillageLivingConditions villageLivingConditions1 = new VillageLivingConditions();
-        villageLivingConditions1.setLivingCondition(livingCondition1);
-        village1.setVillageLivingConditions(List.of(villageLivingConditions1));
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-        ObjectAroundVillage object2 = new ObjectAroundVillage(2L, "Type2");
-        ObjectVillage objectVillage2 = new ObjectVillage();
-        objectVillage2.setObject(object2);
-        village2.setObjectVillages(List.of(objectVillage2));
-
-        LivingCondition livingCondition2 = new LivingCondition(2L, "LivingCondition2");
-        VillageLivingConditions villageLivingConditions2 = new VillageLivingConditions();
-        villageLivingConditions2.setLivingCondition(livingCondition2);
-        village2.setVillageLivingConditions(List.of(villageLivingConditions2));
-        villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.villageToVillageDTOWithoutChildren(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(1, dto1.getObject().size());
-        assertEquals(1, dto1.getLivingConditions().size());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(1, dto2.getObject().size());
-        assertEquals(1, dto2.getLivingConditions().size());
-    }
-
 
     @Test
     void testGetSearchVillagesByObjectAndLivingCondition() {
@@ -713,113 +472,28 @@ class VillageServiceTests {
         villages.add(village2);
 
         VillageRepository mockRepository = mock(VillageRepository.class);
-        when(mockRepository.searchVillagesByObjectAndLivingCondition(anyList(), anyList())).thenReturn(villages);
+        when(mockRepository.searchVillagesByObjectAndLivingCondition(anyList(), anyList(), any())).thenReturn(new PageImpl<>(villages));
 
-        VillageService villageService = new VillageService(mockRepository, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.getSearchVillagesByObjectAndLivingCondition(Collections.singletonList("Object1"), Collections.singletonList("LivingCondition1"));
+        VillageService villageService = new VillageService(mockRepository, new ModelMapper(), null, null);
 
-        assertEquals(2, villageDTOs.size());
+        Page<VillageDTO> villageDTOs = villageService.getSearchVillagesByObjectAndLivingCondition(Collections.singletonList("Object1"), Collections.singletonList("LivingCondition1"), pageNumber, elementsCount, sort);
 
-        VillageDTO dto1 = villageDTOs.get(0);
+        assertEquals(2, villageDTOs.getTotalElements());
+
+        VillageDTO dto1 = villageDTOs.getContent().get(0);
         assertEquals(1L, dto1.getId());
         assertEquals("Village1", dto1.getName());
         assertEquals("Region1", dto1.getRegion());
         assertEquals(1, dto1.getObject().size());
         assertEquals(1, dto1.getLivingConditions().size());
 
-        VillageDTO dto2 = villageDTOs.get(1);
+        VillageDTO dto2 = villageDTOs.getContent().get(1);
         assertEquals(2L, dto2.getId());
         assertEquals("Village2", dto2.getName());
         assertEquals("Region2", dto2.getRegion());
         assertEquals(1, dto2.getObject().size());
         assertEquals(1, dto2.getLivingConditions().size());
     }
-
-    @Test
-    void testVillageToVillageDTOChildren() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-        village1.setPopulations(Arrays.asList(
-                new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
-                        true, LocalDateTime.now(), LocalDateTime.now())
-        ));
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-        village2.setPopulations(Arrays.asList(
-                new Population(1L, village1, 111, NumberOfPopulation.UP_TO_10_PEOPLE, Residents.FROM_21_TO_30_PERCENT, Children.FROM_21_TO_50, Foreigners.I_DONT_KNOW,
-                        true, LocalDateTime.now(), LocalDateTime.now())
-        ));
-        villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.villageToVillageDTOChildren(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(Children.FROM_21_TO_50, dto1.getPopulations().get(0).getChildren());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(Children.FROM_21_TO_50, dto2.getPopulations().get(0).getChildren());
-
-    }
-
-
-    @Test
-    void testVillageToVillageDTOObject() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-
-        ObjectAroundVillage object1 = new ObjectAroundVillage(1L, "Type1");
-        ObjectVillage objectVillage1 = new ObjectVillage();
-        objectVillage1.setObject(object1);
-        village1.setObjectVillages(List.of(objectVillage1));
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-        ObjectAroundVillage object2 = new ObjectAroundVillage(2L, "Type2");
-        ObjectVillage objectVillage2 = new ObjectVillage();
-        objectVillage2.setObject(object2);
-        village2.setObjectVillages(List.of(objectVillage2));
-        villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.villageToVillageDTOObject(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(1, dto1.getObject().size());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(1, dto2.getObject().size());
-    }
-
 
     @Test
     void testGetSearchVillagesByObject() {
@@ -846,135 +520,24 @@ class VillageServiceTests {
         villages.add(village2);
 
         VillageRepository mockRepository = mock(VillageRepository.class);
-        when(mockRepository.searchVillagesByObject(anyList())).thenReturn(villages);
+        when(mockRepository.searchVillagesByObject(anyList(), any())).thenReturn(new PageImpl<>(villages, PageRequest.of(pageNumber, elementsCount), villages.size()));
 
-        VillageService villageService = new VillageService(mockRepository, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.getSearchVillagesByObject(Collections.singletonList("Object1"));
+        VillageService villageService = new VillageService(mockRepository, new ModelMapper(), null, null);
+        Page<VillageDTO> villageDTOs = villageService.getSearchVillagesByObject(Collections.singletonList("Object1"), pageNumber, elementsCount, sort);
 
-        assertEquals(2, villageDTOs.size());
+        assertEquals(2, villageDTOs.getTotalElements());
 
-        VillageDTO dto1 = villageDTOs.get(0);
+        VillageDTO dto1 = villageDTOs.getContent().get(0);
         assertEquals(1L, dto1.getId());
         assertEquals("Village1", dto1.getName());
         assertEquals("Region1", dto1.getRegion());
         assertEquals(1, dto1.getObject().size());
 
-        VillageDTO dto2 = villageDTOs.get(1);
+        VillageDTO dto2 = villageDTOs.getContent().get(1);
         assertEquals(2L, dto2.getId());
         assertEquals("Village2", dto2.getName());
         assertEquals("Region2", dto2.getRegion());
         assertEquals(1, dto2.getObject().size());
-    }
-
-    @Test
-    void testVillageToVillageDTOLivingCondition() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-
-        LivingCondition livingCondition1 = new LivingCondition(1L, "LivingCondition1");
-        VillageLivingConditions villageLivingConditions1 = new VillageLivingConditions();
-        villageLivingConditions1.setLivingCondition(livingCondition1);
-        village1.setVillageLivingConditions(List.of(villageLivingConditions1));
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-        LivingCondition livingCondition2 = new LivingCondition(2L, "LivingCondition2");
-        VillageLivingConditions villageLivingConditions2 = new VillageLivingConditions();
-        villageLivingConditions2.setLivingCondition(livingCondition2);
-        village2.setVillageLivingConditions(List.of(villageLivingConditions2));
-        villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.villageToVillageDTOLivingCondition(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(1, dto1.getLivingConditions().size());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(1, dto2.getLivingConditions().size());
-    }
-
-
-    @Test
-    void testConvertToDTO() {
-        List<Village> villages = new ArrayList<>();
-        Village village1 = new Village();
-        village1.setId(1L);
-        village1.setName("Village1");
-        village1.setRegion(new Region(1L, "Region1"));
-
-        ObjectAroundVillage object1 = new ObjectAroundVillage(1L, "Type1");
-        ObjectVillage objectVillage1 = new ObjectVillage();
-        objectVillage1.setObject(object1);
-        village1.setObjectVillages(List.of(objectVillage1));
-
-        LivingCondition livingCondition1 = new LivingCondition(1L, "LivingCondition1");
-        VillageLivingConditions villageLivingConditions1 = new VillageLivingConditions();
-        villageLivingConditions1.setLivingCondition(livingCondition1);
-        village1.setVillageLivingConditions(List.of(villageLivingConditions1));
-
-        Children children1 = Children.FROM_11_TO_20;
-        Population population1 = new Population();
-        population1.setChildren(children1);
-        village1.setPopulations(Collections.singletonList(population1));
-
-        villages.add(village1);
-
-        Village village2 = new Village();
-        village2.setId(2L);
-        village2.setName("Village2");
-        village2.setRegion(new Region(2L, "Region2"));
-        ObjectAroundVillage object2 = new ObjectAroundVillage(2L, "Type2");
-        ObjectVillage objectVillage2 = new ObjectVillage();
-        objectVillage2.setObject(object2);
-        village2.setObjectVillages(List.of(objectVillage2));
-
-        LivingCondition livingCondition2 = new LivingCondition(2L, "LivingCondition2");
-        VillageLivingConditions villageLivingConditions2 = new VillageLivingConditions();
-        villageLivingConditions2.setLivingCondition(livingCondition2);
-        village2.setVillageLivingConditions(List.of(villageLivingConditions2));
-
-        Children children2 = Children.OVER_50;
-        Population population2 = new Population();
-        population2.setChildren(children2);
-        village2.setPopulations(Collections.singletonList(population2));
-
-        villages.add(village2);
-
-        VillageService villageService = new VillageService(null, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.convertToDTO(villages);
-
-        assertEquals(2, villageDTOs.size());
-
-        VillageDTO dto1 = villageDTOs.get(0);
-        assertEquals(1L, dto1.getId());
-        assertEquals("Village1", dto1.getName());
-        assertEquals("Region1", dto1.getRegion());
-        assertEquals(1, dto1.getObject().size());
-        assertEquals(1, dto1.getLivingConditions().size());
-        assertEquals(Children.FROM_11_TO_20.getEnumValue(), dto1.getPopulations().get(0).getChildren());
-
-        VillageDTO dto2 = villageDTOs.get(1);
-        assertEquals(2L, dto2.getId());
-        assertEquals("Village2", dto2.getName());
-        assertEquals("Region2", dto2.getRegion());
-        assertEquals(1, dto2.getObject().size());
-        assertEquals(1, dto2.getLivingConditions().size());
-        assertEquals(Children.OVER_50.getEnumValue(), dto2.getPopulations().get(0).getChildren());
     }
 
     @Test
@@ -999,26 +562,25 @@ class VillageServiceTests {
         villages.add(village2);
 
         VillageRepository mockRepository = mock(VillageRepository.class);
-        when(mockRepository.searchVillagesByLivingCondition(anyList())).thenReturn(villages);
+        when(mockRepository.searchVillagesByLivingCondition(anyList(), any())).thenReturn(new PageImpl<>(villages, PageRequest.of(pageNumber, elementsCount), villages.size()));
 
-        VillageService villageService = new VillageService(mockRepository, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.getSearchVillagesByLivingCondition(Collections.singletonList("LivingCondition1"));
+        VillageService villageService = new VillageService(mockRepository, new ModelMapper(), null, null);
+        Page<VillageDTO> villageDTOs = villageService.getSearchVillagesByLivingCondition(Collections.singletonList("LivingCondition1"), pageNumber, elementsCount, sort);
 
-        assertEquals(2, villageDTOs.size());
+        assertEquals(2, villageDTOs.getTotalElements());
 
-        VillageDTO dto1 = villageDTOs.get(0);
+        VillageDTO dto1 = villageDTOs.getContent().get(0);
         assertEquals(1L, dto1.getId());
         assertEquals("Village1", dto1.getName());
         assertEquals("Region1", dto1.getRegion());
         assertEquals(1, dto1.getLivingConditions().size());
 
-        VillageDTO dto2 = villageDTOs.get(1);
+        VillageDTO dto2 = villageDTOs.getContent().get(1);
         assertEquals(2L, dto2.getId());
         assertEquals("Village2", dto2.getName());
         assertEquals("Region2", dto2.getRegion());
         assertEquals(1, dto2.getLivingConditions().size());
     }
-
 
     @Test
     void testGetSearchVillages() {
@@ -1048,18 +610,18 @@ class VillageServiceTests {
         villages.add(village1);
 
         VillageRepository mockRepository = mock(VillageRepository.class);
-        when(mockRepository.searchVillages(anyList(), anyList(), any())).thenReturn(villages);
+        when(mockRepository.searchVillages(anyList(), anyList(), any(), any())).thenReturn(new PageImpl<>(villages, PageRequest.of(pageNumber, elementsCount), villages.size()));
 
-        VillageService villageService = new VillageService(mockRepository, null, null, null);
-        List<VillageDTO> villageDTOs = villageService.getSearchVillages(
+        VillageService villageService = new VillageService(mockRepository, new ModelMapper(), null, null);
+        Page<VillageDTO> villageDTOs = villageService.getSearchVillages(
                 Collections.singletonList("Type1"),
                 Collections.singletonList("LivingCondition1"),
-                Children.FROM_21_TO_50
+                Children.FROM_21_TO_50, pageNumber, elementsCount, sort
         );
 
-        assertEquals(1, villageDTOs.size());
+        assertEquals(1, villageDTOs.getTotalElements());
 
-        VillageDTO dto1 = villageDTOs.get(0);
+        VillageDTO dto1 = villageDTOs.getContent().get(0);
         assertEquals(1L, dto1.getId());
         assertEquals("Village1", dto1.getName());
         assertEquals("Region1", dto1.getRegion());
@@ -1067,7 +629,6 @@ class VillageServiceTests {
         assertEquals(1, dto1.getLivingConditions().size());
         assertEquals(Children.FROM_21_TO_50, dto1.getPopulations().get(0).getChildren());
     }
-
 
     @Test
     void testCreateVillageWhenVillageExists() {
@@ -1119,7 +680,8 @@ class VillageServiceTests {
         villages.add(village1);
         villages.add(village2);
 
-        when(villageRepository.findAllApprovedVillages()).thenReturn(villages);
+        Page<Village> mockedPage = new PageImpl<>(villages, PageRequest.of(0, 6), villages.size());
+        when(villageRepository.findAllApprovedVillages(PageRequest.of(0, 6))).thenReturn(mockedPage);
 
         VillageDTO villageDTO1 = new VillageDTO();
         villageDTO1.setName("Village1");
@@ -1132,40 +694,9 @@ class VillageServiceTests {
         when(modelMapper.map(village1, VillageDTO.class)).thenReturn(villageDTO1);
         when(modelMapper.map(village2, VillageDTO.class)).thenReturn(villageDTO2);
 
-        List<VillageDTO> approvedVillages = villageService.getAllApprovedVillages();
+        Page<VillageDTO> approvedVillages = villageService.getAllApprovedVillages(pageNumber, elementsCount, sort);
 
-        assertEquals("Village1", approvedVillages.get(0).getName());
-    }
-
-    @Test
-    void testGetVillagesByStatus() {
-        boolean status = true;
-
-        List<Village> villagesWithStatus = new ArrayList<>();
-        villagesWithStatus.add(new Village(1L, "Village1", new Region(),
-                LocalDateTime.now(), true, new Administrator(), LocalDateTime.now(), new ArrayList<>(), new ArrayList<>(),
-
-                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), 1));
-
-
-        when(villageRepository.findByStatus(status)).thenReturn(villagesWithStatus);
-
-        List<VillageDTO> expectedVillageDTOs = new ArrayList<>();
-        expectedVillageDTOs.add(new VillageDTO(1L, "Village1", "region",
-                LocalDateTime.now(), true, new ArrayList<>(), new ArrayList<>(), new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(),
-                new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), 1));
-
-        when(modelMapper.map(any(Village.class), eq(VillageDTO.class))).thenReturn(expectedVillageDTOs.get(0));
-
-        List<VillageDTO> result = villageService.getVillagesByStatus(status);
-
-        assertEquals(expectedVillageDTOs, result);
-        assertEquals(expectedVillageDTOs.size(), result.size());
-
-        verify(villageRepository, times(1)).findByStatus(status);
-        verify(modelMapper, times(1)).map(any(Village.class), eq(VillageDTO.class));
+        assertEquals("Village1", approvedVillages.getContent().get(0).getName());
     }
 
     @Test
@@ -1209,7 +740,7 @@ class VillageServiceTests {
 
         verify(villageRepository, times(1)).findById(villageId);
         verify(villageRepository, times(1)).save(existingVillage);
-        Assertions.assertEquals(expectedVillageDTO, result);
+        assertEquals(expectedVillageDTO, result);
     }
 
     @Test
